fixed image ratio issue on mobile

--- a/css/routes-detail.css
+++ b/css/routes-detail.css
@@ -400,11 +400,10 @@ h4 {
 }
 
 .picture {
-  width: 100%;
+  max-width: 100%;
+  height: auto;
   display: block;
   background-color: var(--colour2);
-  object-fit: cover;
-  height: auto;
 }
 
 /************************* Directions ************************/
